--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,9 +16,6 @@ dependencies:
     sdk: flutter
   intl: ^0.17.0 
 
-  cupertino_icons: ^1.0.2
-
-
 # Firebase
   firebase_core: ^1.10.6
   firebase_analytics: ^9.0.4
@@ -56,6 +53,8 @@ flutter:
   generate: true
   uses-material-design: true
 
+flutter_native_splash:
+  color: "#42a5f5"
 
 
   assets:
