--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,9 @@ dependencies:
   firebase_analytics: ^9.0.4
   firebase_core_web: ^1.5.3
   cloud_firestore: ^3.1.5
+  firebase_auth: ^3.3.7
+  firebase_storage: ^10.2.7
+
 # State Managment
   mobx: ^2.0.5
   flutter_mobx: ^2.0.2
