--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: hackathontemplate
 description: A new Flutter project.
 
-publish_to: 'none' 
+publish_to: "none"
 
 version: 1.0.0+1
 
@@ -12,11 +12,14 @@ dependencies:
   flutter:
     sdk: flutter
 
-  flutter_localizations: 
+  flutter_localizations:
     sdk: flutter
-  intl: ^0.17.0 
+  intl: ^0.17.0
 
-# Firebase
+  # Location
+  geolocator: ^8.1.1
+
+  # Firebase
   firebase_core: ^1.10.6
   firebase_analytics: ^9.0.4
   firebase_core_web: ^1.5.3
@@ -24,32 +27,31 @@ dependencies:
   firebase_auth: ^3.3.7
   firebase_storage: ^10.2.7
 
-# State Managment
+  # State Managment
   mobx: ^2.0.5
   flutter_mobx: ^2.0.2
   mobx_codegen: ^2.0.2
   json_annotation: ^4.1.0
   get_it: ^7.2.0
-# Theme
+  # Theme
   flex_color_scheme: ^4.2.0
   google_fonts: ^2.2.0
-# Splash
+  # Splash
   flutter_native_splash: ^2.0.1+1
-# Widget
+  # Widget
   loading_overlay: ^0.3.0
-# Test
+  # Test
   rename: ^2.0.1
-
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-# Lint
+  # Lint
   lint: ^1.8.2
-# Generator
+  # Generator
   build_runner: ^2.1.7
   json_serializable: ^4.1.4
-# Testing
+  # Testing
   flutter_launcher_icons: ^0.9.2
 
 flutter:
@@ -59,23 +61,21 @@ flutter:
 flutter_native_splash:
   color: "#42a5f5"
 
-
   assets:
     - assets/
-
 #flutter_icons:
 #  android: "launcher_icon"
 #  ios: true
 #  image_path: "assets/icon/icon.png"
 
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+# fonts:
+#   - family: Schyler
+#     fonts:
+#       - asset: fonts/Schyler-Regular.ttf
+#       - asset: fonts/Schyler-Italic.ttf
+#         style: italic
+#   - family: Trajan Pro
+#     fonts:
+#       - asset: fonts/TrajanPro.ttf
+#       - asset: fonts/TrajanPro_Bold.ttf
+#         weight: 700
