--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   google_sign_in: ^5.2.3
   persistent_bottom_nav_bar: ^4.0.2
   group_button: ^4.2.1
+  kartal: ^2.3.1
 
 dev_dependencies:
   flutter_test:
