--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+    
+  cupertino_icons: ^1.0.4
 
   flutter_localizations:
     sdk: flutter
@@ -52,6 +54,8 @@ dependencies:
   persistent_bottom_nav_bar: ^4.0.2
   group_button: ^4.2.1
   kartal: ^2.3.1
+  intl_phone_number_input: ^0.7.0+2
+  rounded_loading_button: ^2.0.9
 
 dev_dependencies:
   flutter_test:
