--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,10 @@ dependencies:
   kartal: ^2.3.1
   intl_phone_number_input: ^0.7.0+2
   rounded_loading_button: ^2.0.9
+  sensors_plus: ^1.2.1
+  flutter_local_notifications: ^9.3.1
+  rxdart: ^0.27.3
+  animations: ^2.0.2
 
 dev_dependencies:
   flutter_test:
